# magic-school-bus

./: CHANGES.md  Cargo.toml  README.md  test
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  app_state.rs  input_state.rs  main.rs  state.rs  terminal_context.rs  ui.rs  virtual_screen.rs  virtual_screen_buffer.rs
