[package]
name = "magic-school-bus"
authors = ["lgreathouse <me@lpghatguy.com>"]
description = "Cross-platform TUI filesystem browser with Vi-like keybinds"
license = "MIT"
repository = "https://github.com/LPGhatguy/magic-school-bus"
version = "0.3.1"
edition = "2018"

[[bin]]
name = "msb"
path = "src/main.rs"

[dependencies]
clap = "2.32"
crossterm = "0.4.0"
open = "1.2.2"
