[package]
name = "magic-school-bus"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
description = "Cross-platform TUI filesystem browser with Vi-like keybinds"
license = "MIT"
repository = "https://github.com/LPGhatguy/magic-school-bus"
version = "0.7.0"
edition = "2018"

[[bin]]
name = "msb"
path = "src/main.rs"

[dependencies]
clap = "2.32"
all_term = "0.1.0"
open = "1.2.2"
